--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fly-ui",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8090",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -11,6 +12,8 @@
     "@types/node": "^16.7.13",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "axios": "^1.13.2",
+    "@types/axios": "^0.14.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
